[tool.poetry]
name = "fast1"
version = "0.1.0"
description = "An F1 API."
authors = ["Jarkko Piiroinen <183207+jmp@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"
mariadb = "^1.0.8"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
isort = "^5.9.3"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
