[tool.poetry]
name = "fast1"
version = "0.1.0"
description = "An F1 API."
authors = ["Jarkko Piiroinen <183207+jmp@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"
mariadb = "^1.0.8"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.26"}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
isort = "^5.9.3"
flake8 = "^4.0.1"
mypy = "^0.910"
requests = "^2.26.0"
pytest-env = "^0.6.2"
pytest-cov = "^3.0.0"
pytest-bdd = "^5.0.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "acceptance: marks tests as acceptance tests",
]

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

[[tool.mypy.overrides]]
module = ["pytest_bdd"]
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
